<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/device_access_mic"
        android:title="@string/device_access_mic"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true" />
    <item android:id="@+id/device_access_mic_muted"
        android:title="@string/device_access_mic_muted"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true" />
    <item android:id="@+id/device_access_audio_play"
        android:title="@string/device_access_mic_recorded"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true" />
    <item android:id="@+id/device_access_audio_stop"
        android:title="@string/device_access_audio_stop"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true" />
    <item android:id="@+id/upload_sound"
        android:title="@string/upload_new_animal"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true" />
    <item android:id="@+id/check_sound"
        android:title="@string/check_animal"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true" />
    <item android:id="@+id/get_sound_types"
        android:title="@string/get_sounds"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true" />
    <item android:id="@+id/get_sound"
        android:title="@string/get_sound"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true" />

</menu>